update | generals page and swagger responses